# src/lib/swagger/swagger.json
@@ -12,10 +12,6 @@
 
   "tags": [
     {
-      "name": "Users",
-      "description": "Endpoint related to Users"
-    },
-    {
       "name": "Tests",
       "description": "Endpoint related to Tests"
     },
@@ -25,242 +21,6 @@
     }
   ],
   "paths": {
-    "/users": {
-      "post": {
-        "tags": ["Users"],
-        "summary": "Add a new user",
-        "description": "Add a new user",
-        "operationId": "addUser",
-        "requestBody": {
-          "description": "User Creation Payload",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UsersPostRequestBody"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "description": "Successfully created an user",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserResponseBody"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          },
-          "403": {
-            "$ref": "#/components/responses/Forbidden"
-          },
-          "409": {
-            "$ref": "#/components/responses/Conflict"
-          },
-          "422": {
-            "$ref": "#/components/responses/UnprocessableEntity"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      },
-      "get": {
-        "tags": ["Users"],
-        "summary": "List users",
-        "description": "List users",
-        "operationId": "listUsers",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/PageFilter"
-          },
-          {
-            "$ref": "#/components/parameters/PerPageFilter"
-          },
-          {
-            "$ref": "#/components/parameters/SortFilter"
-          },
-          {
-            "$ref": "#/components/parameters/FieldsFilter"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully list users",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserListResponseBody"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          },
-          "403": {
-            "$ref": "#/components/responses/Forbidden"
-          },
-          "404": {
-            "$ref": "#/components/responses/ResourceNotFound"
-          },
-          "409": {
-            "$ref": "#/components/responses/Conflict"
-          },
-          "422": {
-            "$ref": "#/components/responses/UnprocessableEntity"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      }
-    },
-    "/users/{id}": {
-      "patch": {
-        "tags": ["Users"],
-        "summary": "Update a user",
-        "description": "Update a visitor",
-        "operationId": "updateVisitor",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/UserIdParam"
-          }
-        ],
-        "requestBody": {
-          "description": "Update a visitor",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserPatchRequestBody"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "204": {
-            "description": "Successfully updated the user"
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          },
-          "403": {
-            "$ref": "#/components/responses/Forbidden"
-          },
-          "404": {
-            "$ref": "#/components/responses/ResourceNotFound"
-          },
-          "409": {
-            "$ref": "#/components/responses/Conflict"
-          },
-          "422": {
-            "$ref": "#/components/responses/UnprocessableEntity"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      },
-      "get": {
-        "tags": ["Users"],
-        "summary": "Read a user",
-        "description": "Read a user",
-        "operationId": "getUser",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/FieldsFilter"
-          },
-          {
-            "$ref": "#/components/parameters/UserIdParam"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully read the user",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserResponseBody"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          },
-          "403": {
-            "$ref": "#/components/responses/Forbidden"
-          },
-          "404": {
-            "$ref": "#/components/responses/ResourceNotFound"
-          },
-          "409": {
-            "$ref": "#/components/responses/Conflict"
-          },
-          "422": {
-            "$ref": "#/components/responses/UnprocessableEntity"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      },
-      "delete": {
-        "tags": ["Users"],
-        "summary": "Delete a user",
-        "description": "Delete a user",
-        "operationId": "deleteVisitor",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/UserIdParam"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Successfully deleted the user"
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          },
-          "403": {
-            "$ref": "#/components/responses/Forbidden"
-          },
-          "404": {
-            "$ref": "#/components/responses/ResourceNotFound"
-          },
-          "409": {
-            "$ref": "#/components/responses/Conflict"
-          },
-          "422": {
-            "$ref": "#/components/responses/UnprocessableEntity"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      }
-    },
     "/tests": {
       "get": {
         "tags": ["Tests"],
@@ -820,97 +580,6 @@
           }
         }
       },
-      "UsersPostRequestBody": {
-        "$ref": "#/components/schemas/CreateUserAttributes"
-      },
-      "UserPatchRequestBody": {
-        "$ref": "#/components/schemas/UserAttributes"
-      },
-      "UserResponseBody": {
-        "type": "object",
-        "properties": {
-          "data": {
-            "$ref": "#/components/schemas/User"
-          },
-          "meta": {
-            "$ref": "#/components/schemas/BasicMeta"
-          }
-        }
-      },
-      "UserListResponseBody": {
-        "type": "object",
-        "properties": {
-          "data": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/User"
-            }
-          },
-          "metadata": {
-            "$ref": "#/components/schemas/Meta"
-          }
-        }
-      },
-      "User": {
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/UserAttributes"
-          },
-          {
-            "$ref": "#/components/schemas/ResourceTimestamps"
-          },
-          {
-            "type": "object",
-            "properties": {
-              "id": {
-                "type": "integer"
-              }
-            },
-            "required": [
-              "id",
-              "firstName",
-              "lastName",
-              "email",
-              "creationDate",
-              "updateDate"
-            ]
-          }
-        ]
-      },
-      "CreateUserAttributes": {
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/UserAttributes"
-          },
-          {
-            "type": "object",
-            "required": ["firstName", "email", "password"]
-          }
-        ]
-      },
-      "UserAttributes": {
-        "type": "object",
-        "properties": {
-          "firstName": {
-            "type": "string",
-            "example": "John"
-          },
-          "lastName": {
-            "type": "string",
-            "nullable": true,
-            "example": "Smith"
-          },
-          "email": {
-            "type": "string",
-            "format": "email",
-            "example": "tom@jerry.com"
-          },
-          "password": {
-            "type": "string",
-            "example": "Password@123"
-          }
-        }
-      },
       "TestListResponseBody": {
         "type": "object",
         "properties": {
@@ -1127,15 +796,6 @@
       }
     },
     "parameters": {
-      "UserIdParam": {
-        "name": "id",
-        "in": "path",
-        "description": "Id of user",
-        "required": true,
-        "schema": {
-          "type": "integer"
-        }
-      },
       "TestIdParam": {
         "name": "id",
         "in": "path",
